add breakpoints mixin

--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -1,5 +1,8 @@
 @use "./functions" as fn;
-// Font face --------------------------------------------------------------------
+@use "./variables" as var;
+
+// Font face mixin
+// ------------------------------------------------------------------------------
 // Creates a font-face declaration.
 // usage: @include font-face(Samplinal, path/to/font, 500, normal, eot woff2 woff);
 @mixin font-face(
@@ -42,4 +45,17 @@
     src: $src;
   }
 }
+
+// Media query mixin
 // ------------------------------------------------------------------------------
+@mixin media($mq-breakpoint, $mq-breakpoints: var.$breakpoints) {
+  // If $mq-breakpoint is a key that exists in
+  // $mq-breakpoints, get and use the value
+  @if map-has-key($mq-breakpoints, $mq-breakpoint) {
+    $mq-breakpoint: map-get($mq-breakpoints, $mq-breakpoint);
+  }
+
+  @media screen and (min-width: #{$mq-breakpoint}) {
+    @content;
+  }
+}
