--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,6 +1,9 @@
 @use "../abstracts/tokens" as token;
 @use "../abstracts/mixins" as mixin;
 
+/**
+ * HEADER
+ * -------------------------------------------------------------------------- */
 .header {
   position: relative;
   display: flex;
