--- a/assets/sass/abstracts/_tokens.scss
+++ b/assets/sass/abstracts/_tokens.scss
@@ -29,3 +29,13 @@ $header-logo-desktop-width: 12.5rem;
 $header-color-background: var.$clr-neutral-100;
 $header-color-text: var.$clr-neutral-900;
 $header-shadow: var.$shadow-100;
+
+// Footer
+$footer-padding-mobile: var.$space-medium;
+$footer-padding-desktop: var.$space-large var.$space-medium var.$space-medium;
+$footer-gap-mobile: var.$space-small;
+$footer-gap-desktop: var.$space-large;
+$footer-color-background: var.$clr-neutral-800;
+$footer-color-text: var.$clr-neutral-100;
+$footer-font-size: var.$fs-normal;
+$footer-title-font-family: var.$ff-cursive;
