--- a/assets/sass/base/_reset.scss
+++ b/assets/sass/base/_reset.scss
@@ -18,9 +18,11 @@ h4,
 p,
 figure,
 blockquote,
+ul,
 dl,
 dd {
   margin: 0;
+  padding: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
