--- a/assets/sass/components/_index.scss
+++ b/assets/sass/components/_index.scss
@@ -1,1 +1,6 @@
+/**
+ * COMPONENTS
+ * ========================================================================== */
+@forward "buttons";
 @forward "cards";
+@forward "navs";
