--- a/assets/sass/components/_navs.scss
+++ b/assets/sass/components/_navs.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/variables" as var;
+
 /**
  * NAVS
  * -------------------------------------------------------------------------- */
@@ -5,7 +7,13 @@
   list-style: none;
 
   &__link {
+    display: flex;
+    align-items: center;
     text-decoration: none;
     color: inherit;
+  }
+
+  [class*="icon-"] {
+    margin-right: var.$space-small;
   }
 }
