--- a/assets/sass/layout/_index.scss
+++ b/assets/sass/layout/_index.scss
@@ -1,2 +1,5 @@
+/**
+ * LAYOUT
+ * ========================================================================== */
 @forward "header";
 @forward "footer";
