replate header go back icon

--- a/assets/sass/abstracts/_tokens.scss
+++ b/assets/sass/abstracts/_tokens.scss
@@ -29,6 +29,7 @@ $header-logo-desktop-width: 12.5rem;
 $header-color-background: var.$clr-neutral-100;
 $header-color-text: var.$clr-neutral-900;
 $header-shadow: var.$shadow-100;
+$header-icon-size: var.$fs-medium;
 
 // Footer
 $footer-padding-mobile: var.$space-medium;
