--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,7 @@ select {
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 1;
+  line-height: inherit;
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -227,6 +227,9 @@ h4 {
 .header__go-back {
   position: absolute;
   z-index: 1;
+  color: inherit;
+  text-decoration: none;
+  font-size: 1.125rem;
 }
 
 /**
