--- a/assets/sass/abstracts/_tokens.scss
+++ b/assets/sass/abstracts/_tokens.scss
@@ -33,7 +33,7 @@ $header-icon-size: var.$fs-medium;
 
 // Footer
 $footer-padding-mobile: var.$space-medium;
-$footer-padding-desktop: var.$space-large var.$space-medium var.$space-medium;
+$footer-padding-desktop: var.$space-xlarge var.$space-large var.$space-medium;
 $footer-gap-mobile: var.$space-small;
 $footer-gap-desktop: var.$space-large;
 $footer-color-background: var.$clr-neutral-800;
