--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -45,6 +45,7 @@ $ff-cursive: "Shrikhand", cursive;
 $space-small: 0.75rem;
 $space-medium: 1.125rem;
 $space-large: 2.5rem;
+$space-xlarge: 3rem;
 
 // RADIUS
 // ------------------------------------------------------------------------------
