--- a/assets/sass/layout/_index.scss
+++ b/assets/sass/layout/_index.scss
@@ -1,5 +1,6 @@
 /**
  * LAYOUT
  * ========================================================================== */
+@forward "layout";
 @forward "header";
 @forward "footer";
