--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -75,12 +75,14 @@ $icomoon-font-family: "icomoon" !default;
 $icomoon-font-path: "fonts" !default;
 
 $icomoon-icons: (
-  "heart": "\e900",
-  "arrow-left": "\e901",
-  "hands": "\e902",
-  "list": "\e903",
-  "location": "\e904",
-  "phone": "\e905",
-  "store": "\e906",
+  "arrow-left": "\e900",
+  "hands": "\e901",
+  "heart-plain": "\e902",
+  "heart": "\e903",
+  "list": "\e904",
+  "check": "\e905",
+  "phone": "\e906",
   "ustencils": "\e907",
+  "store": "\e908",
+  "location": "\e909",
 );
