--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -65,3 +65,10 @@
 @mixin shadow($context: var.$shadow-100) {
   box-shadow: $context;
 }
+
+@mixin mask() {
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  -moz-text-fill-color: transparent;
+}
