--- a/assets/sass/abstracts/_tokens.scss
+++ b/assets/sass/abstracts/_tokens.scss
@@ -40,3 +40,12 @@ $footer-color-background: var.$clr-neutral-800;
 $footer-color-text: var.$clr-neutral-100;
 $footer-font-size: var.$fs-normal;
 $footer-title-font-family: var.$ff-cursive;
+
+// Cards
+$card-shadow: var.$shadow-200;
+$card-shadow-over: var.$shadow-300;
+$card-border-radius: var.$radius-medium;
+$card-content-padding: var.$space-medium;
+$card-icon-size: var.$fs-large;
+$card-action-background: var.$clr-accent;
+$card-action-color: var.$clr-neutral-100;
