--- a/assets/sass/layout/_layout.scss
+++ b/assets/sass/layout/_layout.scss
@@ -1,4 +1,4 @@
-@use "../abstracts/tokens" as token;
+@use "../abstracts/variables" as var;
 
 /**
  * GLOBAL
@@ -6,4 +6,8 @@
 body {
   display: grid;
   grid-template-rows: auto 1fr auto;
+}
+
+section {
+  padding: var.$space-medium;
 }
