new location component

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,16 @@ h4 {
 /**
  * COMPONENTS
  * ========================================================================== */
+.location {
+  display: flex;
+  gap: 0.75rem;
+  align-items: center;
+  justify-content: center;
+  padding: 0.75rem;
+  font-weight: 500;
+  background-color: #eaeaea;
+}
+
 /**
  * Cards
  * -------------------------------------------------------------------------- */
