--- a/assets/sass/abstracts/_tokens.scss
+++ b/assets/sass/abstracts/_tokens.scss
@@ -49,3 +49,11 @@ $card-content-padding: var.$space-medium;
 $card-icon-size: var.$fs-large;
 $card-action-background: var.$clr-accent;
 $card-action-color: var.$clr-neutral-100;
+
+// Location
+$location-color-background: var.$clr-neutral-300;
+$location-padding: var.$space-small;
+$location-icon-size: var.$fs-large;
+$location-icon-color: var.$clr-accent;
+$location-icon-margin: var.$space-small;
+$location-font-weight: var.$fw-medium;
