--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -16,7 +16,7 @@ $clr-neutral-700: #505050;
 $clr-neutral-600: #7e7e7e; // Use in DSM
 $clr-neutral-500: #909090;
 $clr-neutral-400: #b0b0b0;
-$clr-neutral-300: #d0d0d0;
+$clr-neutral-300: #eaeaea; // Use in DSM
 $clr-neutral-200: #f6f6f6; // Use in DSM
 $clr-neutral-100: #ffffff; // Use in DSM
 
