--- a/assets/sass/components/_index.scss
+++ b/assets/sass/components/_index.scss
@@ -2,5 +2,6 @@
  * COMPONENTS
  * ========================================================================== */
 @forward "buttons";
+@forward "location";
 @forward "cards";
 @forward "navs";
