--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -20,6 +20,9 @@ $clr-neutral-300: #eaeaea; // Use in DSM
 $clr-neutral-200: #f6f6f6; // Use in DSM
 $clr-neutral-100: #ffffff; // Use in DSM
 
+$clr-gradient-1: #ff79da;
+$clr-gradient-2: #9356dc;
+
 // FONT
 // ------------------------------------------------------------------------------
 
