disallow menu multi-selection + add hover delay

--- a/assets/sass/abstracts/_tokens.scss
+++ b/assets/sass/abstracts/_tokens.scss
@@ -60,7 +60,8 @@ $footer-title-font-family: var.$ff-cursive;
 $card-shadow: var.$shadow-200;
 $card-shadow-over: var.$shadow-300;
 $card-border-radius: var.$radius-medium;
-$card-content-padding: var.$space-medium;
+$card-content-padding-inline: var.$space-medium;
+$card-content-padding-block: var.$space-small;
 $card-icon-size: var.$fs-large;
 $card-action-background: var.$clr-accent;
 $card-action-color: var.$clr-neutral-100;
