--- a/assets/sass/components/_cards.scss
+++ b/assets/sass/components/_cards.scss
@@ -56,7 +56,8 @@
     // Text
     // Generaly contains a title and a description
     &__text {
-      padding: token.$card-content-padding;
+      padding: token.$card-content-padding-block
+        token.$card-content-padding-inline;
       overflow: hidden;
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -67,7 +68,8 @@
     &__price {
       display: flex;
       align-items: flex-end;
-      padding: token.$card-content-padding;
+      padding: token.$card-content-padding-block
+        token.$card-content-padding-inline;
     }
 
     // Use to trigger the action add or like
@@ -104,7 +106,7 @@
       color: token.$card-action-color;
 
       max-width: 0;
-      transition: max-width 200ms ease-in-out;
+      transition: 200ms max-width 0s ease-in-out;
 
       [class*="icon-"] {
         opacity: 0.25;
@@ -115,6 +117,7 @@
 
       @media (hover: hover) {
         &:hover {
+          transition-delay: 400ms;
           max-width: calc(token.$card-icon-size + 1rem);
         }
       }
@@ -123,7 +126,7 @@
     // Trigger the action add
     &__checkbox:checked ~ &__action--add {
       max-width: calc(
-        token.$card-icon-size + calc(token.$card-content-padding * 3)
+        token.$card-icon-size + calc(token.$card-content-padding-inline * 3)
       );
       .icon-check {
         animation: 200ms action-bounce 300ms forwards;
