--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,7 +279,7 @@ h4 {
   grid-template-columns: 1fr auto auto;
 }
 .card-content__text {
-  padding: 1.125rem;
+  padding: 0.75rem 1.125rem;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -287,7 +287,7 @@ h4 {
 .card-content__price {
   display: flex;
   align-items: flex-end;
-  padding: 1.125rem;
+  padding: 0.75rem 1.125rem;
 }
 .card-content__checkbox {
   display: none;
@@ -313,7 +313,7 @@ h4 {
   background-color: #99e2d0;
   color: #ffffff;
   max-width: 0;
-  transition: max-width 200ms ease-in-out;
+  transition: 200ms max-width 0s ease-in-out;
 }
 .card-content__action--add [class*=icon-] {
   opacity: 0.25;
@@ -323,6 +323,7 @@ h4 {
 }
 @media (hover: hover) {
   .card-content__action--add:hover {
+    transition-delay: 400ms;
     max-width: 2.5rem;
   }
 }
