--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -43,6 +43,10 @@ $fw-bold: 700;
 $ff-sans: "Roboto", sans-serif;
 $ff-cursive: "Shrikhand", cursive;
 
+// flh = font-line-height
+$flh-heading: 1.2;
+$flh-body: 1.5;
+
 // SPACES
 // ------------------------------------------------------------------------------
 $space-small: 0.75rem;
