prevent counter from shrinking

--- a/assets/sass/components/_steps-list.scss
+++ b/assets/sass/components/_steps-list.scss
@@ -50,6 +50,8 @@
       background-color: token.$steps-list-counter-background;
       color: token.$steps-list-counter-color;
       border-radius: token.$steps-list-counter-radius;
+
+      flex-shrink: 0; // Prevents the counter from shrinking
     }
   }
 }
