Prevent tap highlight on IOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,11 @@
   box-sizing: border-box;
 }
 
+/* Prevent tap highlight on IOS */
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 /* Remove default margin */
 body,
 h1,
@@ -431,6 +436,7 @@ h4 {
   background-color: #9356dc;
   color: #ffffff;
   border-radius: 100vmax;
+  flex-shrink: 0;
 }
 
 /**
