--- a/assets/sass/components/_cards.scss
+++ b/assets/sass/components/_cards.scss
@@ -145,6 +145,7 @@
       @extend %card-action;
       position: relative;
       transition: scale 200ms ease-in-out;
+      transform-origin: center;
 
       .icon-heart-plain {
         opacity: 0;
