--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -2,6 +2,10 @@
 @use "../abstracts/mixins" as mixin;
 
 .content-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   background-color: var.$clr-neutral-200;
 
