new restaurant : la palette du gout

--- a/assets/sass/abstracts/_tokens.scss
+++ b/assets/sass/abstracts/_tokens.scss
@@ -67,6 +67,7 @@ $card-content-padding-block: var.$space-small;
 $card-icon-size: var.$fs-large;
 $card-action-background: var.$clr-accent;
 $card-action-color: var.$clr-neutral-100;
+$card-background: var.$clr-neutral-100;
 
 // Location
 $location-color-background: var.$clr-neutral-300;
