--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,6 +205,8 @@ h4 {
   display: inline-flex;
   background: linear-gradient(to bottom, #ff79da 0%, #9356dc 100%);
   color: #ffffff;
+  border: none;
+  cursor: pointer;
   text-decoration: none;
   padding: 0.75rem 1.125rem;
   font-weight: 500;
@@ -249,6 +251,7 @@ h4 {
 .card {
   position: relative;
   border-radius: 1.125rem;
+  background-color: #ffffff;
   overflow: hidden;
   box-shadow: 0 4px 8px hsla(0, 0%, 6%, 0.15);
 }
@@ -455,6 +458,10 @@ body {
   padding: 2.5rem 1.125rem;
 }
 
+.content-section > * {
+  width: min(1040px, 100%);
+  margin-inline: auto;
+}
 .content-section__list {
   display: grid;
   grid-template-columns: repeat(var(--columns), 1fr);
@@ -534,6 +541,10 @@ body {
 }
 
 .content-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   background-color: #f6f6f6;
 }
@@ -570,6 +581,67 @@ body {
     --columns: 2;
     --gap: 2.5rem;
   }
+}
+
+.restaurant-cover img {
+  width: 100%;
+  object-fit: cover;
+  aspect-ratio: 375/275;
+}
+@media screen and (min-width: 720px) {
+  .restaurant-cover img {
+    aspect-ratio: 1440/380;
+  }
+}
+.restaurant-header__heading {
+  width: min(1040px, 100%);
+  margin-inline: auto;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1.125rem;
+  padding: 2.5rem;
+  border-radius: 1.25rem 1.25rem 0 0;
+  margin-top: -2.5rem;
+  background-color: #f6f6f6;
+}
+.restaurant-header__title {
+  font-size: 1.5rem;
+}
+.restaurant-section {
+  background-color: #f6f6f6;
+  width: min(1040px, 100%);
+  margin-inline: auto;
+  padding-block: 1.125rem 2.5rem;
+}
+.restaurant-section form {
+  width: min(630px, 90%);
+  margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+.restaurant-section fieldset {
+  border: none;
+  padding: 0;
+  display: grid;
+  gap: 0.75rem;
+}
+.restaurant-section legend {
+  text-transform: uppercase;
+  margin-bottom: 0.75rem;
+}
+.restaurant-section legend::after {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 3px;
+  background-color: #99e2d0;
+}
+.restaurant-section .button {
+  align-self: center;
 }
 
 /*# sourceMappingURL=style.css.map */
